--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,13 +24,35 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v2
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+        
+      - name: Listar Archivos
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ls
+          pwd
+          
+      - name: install requirements and run tests
+        run: |
+          pip install -r requirements.txt
+          
+      - name: Configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
+          
+      - name:  pruebas unitarias
+        run: |
+          source env/bin/activate
+          pip install pytest
+          pytest
+      
+      - name: funcion bucket
+        run: |
+          aws s3 cp funcion.py  s3://bucketisaa/funcion.py
